# NCursesExperiment

./: CMakeLists.txt  main.cpp
src/ncurses/: Context.h  HorizontalSlider.h  Object.h  Painter.h  Panel.h  Position.h  Rectangle.h  RefreshBlock.h  TextBox.h  Window.h
